[package]
name = "gw2lib"
version = "3.0.2"
edition = "2021"
workspace = "../"
description = "A simple to use Gw2 API wrapper library"
repository = "https://github.com/greaka/gw2lib"
categories = ["api-bindings"]
keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[lib]
name = "gw2lib"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.24"
dashmap = "6.1.0"
serde = "1.0.160"
thiserror = "2.0.8"
either = "1.8.1"
futures = "0.3.28"
serde_json = "1.0.96"
static_init = "1.0.3"
rand = "0.8.5"
hyper-util = "0.1.10"

[dependencies.tracing]
version = "0.1.37"
optional = true

[dependencies.redis]
version = "0.27.6"
default-features = false
features = ["tokio-comp", "tls-rustls"]
optional = true

[dependencies.tokio]
version = "1.27.0"
default-features = false
features = ["sync", "rt", "time", "macros"]

[dependencies.hyper]
version = "1.5.2"
default-features = false
features = ["http1", "client"]

[dependencies.hyper-rustls]
version = "0.27.4"
default-features = false
features = ["http1", "native-tokio", "logging", "tls12"]

[dependencies.gw2lib-model]
version = "2.0.5"
path = "../model"

[features]
blocking = []
redis = ["dep:redis"]
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
features = ["redis"]
