[package]
name = "gw2lib"
version = "3.0.2"
edition = "2021"
workspace = "../"
description = "A simple to use Gw2 API wrapper library"
repository = "https://github.com/greaka/gw2lib"
categories = ["api-bindings"]
keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[lib]
name = "gw2lib"
path = "src/lib.rs"

[features]
default = ["rustls"]
blocking = []
redis = ["dep:redis", "dep:kanal"]
tracing = ["dep:tracing"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls"]

[dependencies]
chrono = "0.4.24"
dashmap = "6.1.0"
serde = "1.0.160"
thiserror = "2.0.8"
either = "1.8.1"
futures = "0.3.28"
serde_json = "1.0.96"
static_init = "1.0.3"
rand = "0.9.1"
# must be kept in sync with reqwest
url = "2.4.1"

[dependencies.tracing]
version = "0.1.41"
optional = true

[dependencies.redis]
version = "0.32.4"
default-features = false
features = ["tokio-comp", "tls-rustls"]
optional = true

[dependencies.kanal]
version = "0.1.1"
optional = true

[dependencies.tokio]
version = "1.27.0"
default-features = false
features = ["sync", "rt", "time", "macros"]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["gzip", "json"]

[dependencies.rustls]
# must be kept in sync with the version reqwest uses
version = "0.23.4"
optional = true
default-features = false
features = ["ring"]

[dependencies.gw2lib-model]
version = "2.0.5"
path = "../model"

[package.metadata.docs.rs]
features = ["redis"]
