[package]
name = "gw2lib"
version = "3.0.2"
edition = "2024"
workspace = "../"
description = "A simple to use Gw2 API wrapper library"
repository = "https://github.com/greaka/gw2lib"
categories = ["api-bindings"]
keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[lib]
name = "gw2lib"
path = "src/lib.rs"

[features]
default = ["rustls"]
blocking = []
redis = ["dep:redis", "dep:kanal"]
tracing = ["dep:tracing"]
native-tls = ["reqwest/native-tls", "redis?/tokio-native-tls-comp"]
rustls = ["reqwest/rustls-tls-native-roots", "dep:rustls", "redis?/tokio-rustls-comp"]

[dependencies]
chrono = "0.4.42"
# todo: arc_swap?
dashmap = "6.1.0"
serde = "1.0.225"
thiserror = "2.0.16"
either = "1.15.0"
futures = "0.3.31"
serde_json = "1.0.145"
static_init = "1.0.4"
rand = "0.9.2"
# must be kept in sync with reqwest
url = "2.5.7"

[dependencies.tracing]
version = "0.1.41"
optional = true

[dependencies.redis]
# todo: 1.0 soon?
version = "0.32.5"
default-features = false
optional = true

[dependencies.kanal]
version = "0.1.1"
optional = true

[dependencies.tokio]
version = "1.47.1"
default-features = false
features = ["sync", "rt", "time", "macros"]

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["gzip", "json"]

[dependencies.rustls]
# must be kept in sync with the version reqwest uses
version = "0.23.31"
optional = true
default-features = false
features = ["ring"]

[dependencies.gw2lib-model]
version = "4.0.0"
path = "../model"

[package.metadata.docs.rs]
features = ["redis"]
