[package]
name = "gw2lib-keys"
version = "0.1.0"
authors = ["Greaka <cargo@greaka.de>"]
edition = "2021"
workspace = "../"
description = "Models for gw2lib"
repository = "https://github.com/greaka/gw2lib"
categories = ["api-bindings"]
keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gw2lib_keys"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.102"
base64 = "0.21.5"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
