[package]
name = "gw2lib-model"
version = "2.0.6"
authors = ["Greaka <cargo@greaka.de>"]
edition = "2021"
workspace = "../"
description = "Models for gw2lib"
repository = "https://github.com/greaka/gw2lib"
categories = ["api-bindings"]
keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
license = "MIT/Apache-2.0"

[lib]
name = "gw2lib_model"
path = "src/lib.rs"

[dependencies]
serde_tuple = "0.5.0"
urlencoding = "2.1.2"

[dependencies.either]
version = "1.8.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.160"
features = [
    "derive"
]
