[package]
name = "gw2lib-model"
version = "4.0.0"
authors = ["Greaka <cargo@greaka.de>"]
edition = "2024"
workspace = "../"
description = "Models for gw2lib"
repository = "https://github.com/greaka/gw2lib"
categories = ["api-bindings"]
keywords = ["api", "guild-wars-2", "gw2", "wrapper", "async"]
license = "MIT/Apache-2.0"

[lib]
name = "gw2lib_model"
path = "src/lib.rs"

[dependencies]
serde_tuple = "1.1.2"
urlencoding = "2.1.3"

[dependencies.either]
version = "1.15.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.225"
features = [
    "derive"
]
