[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
actix-web = "4.1.0"
[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.gw2api-http]
path = "../http"
