[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
actix-web = "4.2.1"
[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.23.0"
features = ["full"]

[dependencies.gw2lib]
path = "../http"
